# tcal

./: .dockerignore  .env.example  .gitignore  .vercelignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: calendar.py  events.py  health.py  index.py
scripts/: fetch_gym_logos.py  sync-dev-api.sh
tests/: test_api_parsing.py  test_caching.py  test_catalog.py  test_categories.py  test_display.py  test_gym_scope.py  test_handlers.py  test_http_util.py  test_resilience.py  test_serialize.py  test_status_page.py  test_time.py
touchstonecal/: __init__.py  __main__.py  api.py  cache.py  categories.py  config.py  display.py  filters.py  http_util.py  ical.py  observability.py  serialize.py  store.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: CalendarToolbar.tsx  CalendarView.tsx  DayColumn.tsx  ErrorBanner.tsx  ErrorBoundary.tsx  EventChip.tsx  EventDetailPopover.tsx  ExportMenu.tsx  FilterPanel.tsx  GymIcon.tsx  GymRail.tsx  LoadingSkeleton.tsx  MobileCategoryDropdown.tsx  MobileGymRail.tsx  MobileToolbar.tsx  calendarUx.test.ts
web/src/hooks/: useCalendarState.ts  useEvents.ts
web/src/lib/: buildCatalog.test.ts  buildCatalog.ts  calendarDay.test.ts  calendarDay.ts  categories.test.ts  categories.ts  colors.ts  dates.test.ts  dates.ts  dayOverflow.ts  defaults.test.ts  defaults.ts  eventDisplay.ts  eventTime.test.ts  eventTime.ts  export.test.ts  export.ts  filterEvents.test.ts  gyms.ts  (+6 more)
(+2 files in other folders)
